# viam-gstreamer

./: .clang-format  CMakeLists.txt  README.md
src/viam_gstream_module/: module_main.cpp
